Update RYD Internship Tasks.html

--- a/RYD Internship Tasks.html
+++ b/RYD Internship Tasks.html
@@ -388,7 +388,7 @@ text-decoration:bold;
 	
 	
 	
-	<div class= "heading"><h2>Logical Reasioning</h2></div>
+	<div class= "heading"><h2>Logical Reasoning</h2></div>
 	
 	<div class="container-fluid">
 	<div class="row">
